--- a/package.json
+++ b/package.json
@@ -2,14 +2,18 @@
   "name": "scheduler",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://anshaalhussain.github.io/Scheduler-oct25/",
   "proxy": "http://localhost:8001",
   "dependencies": {
+    "-": "^0.0.1",
     "axios": "^0.24.0",
     "classnames": "^2.2.6",
+    "gh-pages": "^3.2.3",
     "normalize.css": "^8.0.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.0.0"
+    "react-scripts": "3.0.0",
+    "save-dev": "*"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -17,7 +21,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public --ci",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
